power commit: pile of responsive style updates, remove hamburger and drawer on touch devices

--- a/src/styles/_vars.sass
+++ b/src/styles/_vars.sass
@@ -36,6 +36,7 @@ $media_1400: 1400px
   @media all and (min-width: $min-size)
     @content
 
+$media_ht_360: 360px
 $media_ht_480: 480px
 $media_ht_560: 560px
 $media_ht_666: 666px
