--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -8,6 +8,7 @@
 @import "src/styles/fallback"
 @import "src/styles/header"
 @import "src/styles/pages"
+@import "src/styles/page-nav"
 @import "src/styles/transition"
 @import "src/styles/watch-video"
 @import "src/styles/slides/slide"
