--- a/src/styles/_watch-video.sass
+++ b/src/styles/_watch-video.sass
@@ -4,7 +4,7 @@
   left: 0px
   width: 100%
   height: 100%
-  background-color: $evil_gray
+  background-color: $black
   overflow: hidden
   display: none
 
@@ -20,7 +20,7 @@
       position: relative
       width: 100%
       height: 100%
-      max-width: 666px
+      max-width: 960px
       margin: 0 auto
 
       .video-player
