--- a/src/styles/slides/detail/_detail.sass
+++ b/src/styles/slides/detail/_detail.sass
@@ -116,11 +116,15 @@
                 display: inline-block
 
         &.media-image
-          img
-            width: 100%
-            height: auto
+          .images
             margin: 80px 0 0
-            vertical-align: middle
+            font-size: 0
+            line-height: 0
+            
+            img
+              width: 100%
+              height: auto
+              vertical-align: middle
 
         &.media-video
           .video-holder
