--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -88,7 +88,16 @@
               border-right: 6px solid transparent
               border-top: 6px solid $black
 
-          &:hover span
+// ---------------------------------------------
+// Party mode
+// ---------------------------------------------
+
+.party-on
+  .slide.featured-work
+    .meta-zone
+      ul.mediums
+        li:hover
+          span
             visibility: visible
             opacity: 1
 
