--- a/src/styles/_page-nav.sass
+++ b/src/styles/_page-nav.sass
@@ -96,8 +96,7 @@
                 h4
                   font-size: 14px
 
-          a.active,
-          a:hover
+          a.active
             h4
               color: $black
 
