--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -128,12 +128,16 @@
   .page-inner
     background-color: rgb(0,174,239)
 
-    p
-      position: absolute
-      top: 50%
-      width: 100%
-      margin-top: -6px
-      text-align: center
+    .title-zone
+      .title-holder
+        cursor: default
+
+        h2
+          opacity: 1
+
+      .callouts
+        .callout
+          cursor: default
 
 // -----------------------------------------------
 // Transish
