--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -142,6 +142,7 @@
           cursor: default
 
           .copy
+            max-width: 480px
             margin: 18px 0 0
             font-size: 12px
             line-height: 15px
