--- a/src/styles/slides/detail/_detail.sass
+++ b/src/styles/slides/detail/_detail.sass
@@ -87,7 +87,7 @@
 
             .black-box
               width: 100%
-              max-width: 666px
+              max-width: 768px
               margin: 0 auto
               padding: 40px 20px
               background-color: $almost_black
@@ -284,12 +284,21 @@
             .inner
               padding-bottom: 60px
 
+          &:nth-of-type(3)
+            margin: 0
+
           &.overview
             background-color: transparent
 
             .overview-inner
               .black-box
+                max-width: 616px
                 padding: 60px
+
+                transform: translate3d(0,0px,0)
+
+                &.slide-up
+                  transform: translate3d(0,-200px,0)
 
                 .lists
                   margin: 60px 0
@@ -321,6 +330,7 @@
           &.overview
             .overview-inner
               .black-box
+                max-width: 768px
                 padding: 100px
 
                 .lists
