--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -12,6 +12,7 @@
     width: 100%
     height: 100%
     overflow: hidden
+    cursor: default
 
 // ---------------------------------------------
 // Shared styles: Picture zone
