--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -46,7 +46,7 @@
         li
           width: 25px
           background-image: url('/images/mediums@2x.png')
-          background-size: 25px 180px
+          background-size: 25px 260px
 
           &.mobile
             background-position: center -40px
@@ -57,8 +57,14 @@
           &.three-dimensional
             background-position: center -120px
           
-          &.experimental
+          &.experiential
             background-position: center -160px
+
+          &.illustration
+            background-position: center -200px
+
+          &.game
+            background-position: center -240px
 
           span
             position: absolute
