launch arrow/icon btn styles

--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -487,10 +487,9 @@
 .party-on
   .title-zone
     .callouts
-      .callout
-        &:hover
-          .icon
-            transform: translate3d(8px,0,0)
+      .callout:hover
+        .icon
+          transform: translate3d(8px,0,0)
 
     .title-holder:hover + .callouts
       .callout
