--- a/src/styles/slides/detail/_detail.sass
+++ b/src/styles/slides/detail/_detail.sass
@@ -51,20 +51,85 @@
           position: relative
           padding: 20px 20px 0
 
-          h4
-            max-width: 460px
+        h4
+          max-width: 460px
+          color: $white
+          @include type-mono
+
+        p
+          max-width: 460px
+          margin: 20px 0 0
+          color: $gray
+          @include type-mono
+
+          &:nth-of-type(1)
+            margin: 0
+
+        a
+          position: relative
+          color: $gray
+          display: inline-block
+          
+          &:after
+            content: ''
+            position: absolute
+            bottom: 3px
+            left: 0px
+            width: 100%
+            height: 1px
+            background-color: $gray
+
+            transition: background-color $speed $ease_out
+
+            @include respond-above($media_768)
+              bottom: 4px
+
+          &.launch-link
             color: $white
-            @include type-mono
+            padding: 0 42px 0 0
 
-          p
-            max-width: 460px
-            color: $gray
-            @include type-mono
+            &:after
+              display: none
 
-          .media-content
-            margin: 20px 0 0
+            @include respond-above($media_480)
+              padding: 0 52px 0 0
 
-            transform: translate3d(0,0,0)
+            .icon
+              position: absolute
+              top: 0px
+              right: 12px
+              width: 25px
+              height: 100%
+              overflow: hidden
+
+              transform: translate3d(0px,0,0)
+              transition: transform 150ms $ease_out
+
+              &:before,
+              &:after
+                content: ''
+                position: absolute
+                top: 50%
+                left: 0px
+                width: 14px
+                height: 2px
+                margin: -1px 0 0
+                background-color: $white
+
+              &:after
+                left: 12px
+                width: 0
+                height: 0
+                margin: -4px 0 0
+                border-top: 4px solid transparent
+                border-bottom: 4px solid transparent
+                border-left: 6px solid $white
+                background-color: transparent
+
+        .media-content
+          margin: 20px 0 0
+
+          transform: translate3d(0,0,0)
 
         &:first-child
           height: 100%
@@ -107,7 +172,7 @@
                 @include type-mono
 
               .lists
-                margin: 20px 0
+                margin: 20px 0 0
 
                 ul
                   float: left
@@ -120,7 +185,8 @@
                     &:first-child
                       color: $white
 
-              a
+              a.launch-link
+                margin: 20px 0 0
                 @include type-mono
                 display: inline-block
 
@@ -341,8 +407,8 @@
           .inner
             padding: 40px 40px 0
 
-            .media-content
-              margin: 40px 0 0
+          .media-content
+            margin: 40px 0 0
 
           &:last-child
             .inner
@@ -354,7 +420,10 @@
                 padding: 40px
 
                 .lists
-                  margin: 40px 0
+                  margin: 40px 0 0
+
+                a.launch-link
+                  margin: 40px 0 0
 
         @include respond-above($media_768)
           .inner
@@ -381,7 +450,10 @@
                   transform: translate3d(0,-200px,0)
 
                 .lists
-                  margin: 60px 0
+                  margin: 60px 0 0
+
+                a.launch-link
+                  margin: 60px 0 0
 
           &.media-video
             .video-holder
@@ -412,14 +484,17 @@
                 padding: 100px
 
                 .lists
-                  margin: 80px 0
+                  margin: 80px 0 0
+
+                a.launch-link
+                  margin: 80px 0 0
 
         @include respond-above($media_1180)
           .inner
             padding: 80px 100px 0
 
-            .media-content
-              margin: 80px 0 0
+          .media-content
+            margin: 80px 0 0
 
           &:last-child
             .inner
@@ -475,8 +550,17 @@
   .detail-slides
     .detail-slide
       .content
-        section.media-video
-          .video-holder
-            .video-poster:hover
-              .play-btn
-                background-color: rgba(0,0,0,0.3)
+        section
+          a:hover
+            &:after
+              background-color: $white
+
+          a.launch-link:hover
+            .icon
+              transform: translate3d(8px,0,0)
+
+          &.media-video
+            .video-holder
+              .video-poster:hover
+                .play-btn
+                  background-color: rgba(0,0,0,0.3)
