Updated all of the client logos and service icons, new about text.

--- a/src/styles/slides/_featured-work.sass
+++ b/src/styles/slides/_featured-work.sass
@@ -46,7 +46,7 @@
         li
           width: 25px
           background-image: url('/images/mediums@2x.png')
-          background-size: 25px 260px
+          background-size: 25px 300px
 
           &.mobile
             background-position: center -40px
@@ -66,6 +66,9 @@
           &.game
             background-position: center -240px
 
+          &.live-action
+            background-position: center -280px
+
           span
             position: absolute
             bottom: 100%
@@ -78,6 +81,7 @@
             text-transform: capitalize
             background-color: $black
             visibility: hidden
+            white-space: nowrap
             opacity: 0
 
             transform: translate3d(-50%,-2px,0)
