--- a/src/styles/slides/_about-process.sass
+++ b/src/styles/slides/_about-process.sass
@@ -34,6 +34,10 @@
         &:after
           display: none
 
+        .tagline
+          @include type-mono
+          font-weight: normal
+
       &.top h2
         transform: translate3d(0,-24px,0)
 
