--- a/src/styles/_main.sass
+++ b/src/styles/_main.sass
@@ -30,10 +30,20 @@ a
   background-color: $white
   overflow: hidden
 
-  transition: background-color $speed_metal $evil_ease
+  #ruler-of-the-darkness
+    position: absolute
+    top: 0px
+    left: 0px
+    width: 100%
+    height: 100%
+    background-color: #000
+    opacity: 0
+    transition: opacity $speed_metal $evil_ease
 
   &.inverse
-    background-color: $black
+    #ruler-of-the-darkness
+      opacity: 1
+
 
 #wrapper-inner
   position: absolute
