Progress on the title slides.

--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -91,8 +91,6 @@
                 position: relative
                 width: 100%
                 height: 100%
-                overflow: hidden
-                cursor: default
 
                 video
                   display: none
@@ -102,9 +100,7 @@
                   top: 50%
                   left: 50%
                   width: auto
-                  height: auto
-                  min-width: 100%
-                  min-height: 100%
+                  height: 80%
                   transform: translate(-50%, -50%)
  
 // -----------------------------------------------
