--- a/src/styles/_watch-video.sass
+++ b/src/styles/_watch-video.sass
@@ -75,7 +75,6 @@
         width: 50px
         height: 50px
         overflow: hidden
-
         transform: translate(-50%,-50%)
 
         span
@@ -84,19 +83,13 @@
           left: 0px
           right: 0px
           bottom: 0px
-          border: 10px solid $white
-          border-top: 10px solid transparent
-          border-radius: 50%
-
+          background-image: url(../images/loading@2x.gif)
+          background-repeat: no-repeat
+          background-position: 50% 50%
+          background-size: cover
           transform: rotate(0deg)
-
-      &.loading
-        .spinner
-          span
-            animation: spinner 1s linear infinite
 
       &.loaded
         visibility: hidden
         opacity: 0
-
         transition: visibility 0ms linear ($speed_metal * 2), opacity $speed_metal linear $speed_metal
