--- a/src/styles/_transition.sass
+++ b/src/styles/_transition.sass
@@ -1,2 +1,23 @@
+.page.out-left, .page.out-right
+  transition: transform $speed_metal $evil_ease
+  z-index: 1
+
+.page.out-left
+  transform: translate3d(-100%, 0, 0)
+
+.page.out-right
+  transform: translate3d(100%, 0, 0)
+
 #pages-transition
   display: none
+  position: absolute
+  top: 0px
+  left: 0px
+  width: 100%
+  height: 100%
+  overflow: hidden
+
+  canvas
+    position: absolute
+    top: 0px
+    left: 0px
