--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -15,6 +15,26 @@
     cursor: default
 
 // ---------------------------------------------
+// Shared styles: Cover
+// ---------------------------------------------
+
+.cover-wrap
+  position: relative
+  width: 100%
+  height: 100%
+
+  video
+    display: none
+
+  canvas
+    position: absolute
+    top: 50%
+    left: 50%
+    width: auto
+    height: 80%
+    transform: translate(-50%, -50%)
+
+// ---------------------------------------------
 // Shared styles: Picture zone
 // ---------------------------------------------
 
