Updating style paths for selective steve

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -1,17 +1,17 @@
 /* Settings and dependencies */
-@import "public/vendor/sass-meyer-reset/sass-meyer-reset"
-@import "src/styles/vars"
-@import "src/styles/utils"
+@import "../../public/vendor/sass-meyer-reset/sass-meyer-reset"
+@import "vars"
+@import "utils"
 
 /* Custom styles */
-@import "src/styles/main"
-@import "src/styles/fallback"
-@import "src/styles/header"
-@import "src/styles/pages"
-@import "src/styles/page-nav"
-@import "src/styles/transition"
-@import "src/styles/watch-video"
-@import "src/styles/slides/slide"
-@import "src/styles/slides/home-feature"
-@import "src/styles/slides/work-feature"
-@import "src/styles/slides/detail/detail"
+@import "main"
+@import "fallback"
+@import "header"
+@import "pages"
+@import "page-nav"
+@import "transition"
+@import "watch-video"
+@import "slides/slide"
+@import "slides/home-feature"
+@import "slides/work-feature"
+@import "slides/detail/detail"
