--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -80,21 +80,24 @@
 // -----------------------------------------------
 .page#home
   .page-inner
-    background-color: rgb(255,242,0)
+    .mask-wrapper
+      background-color: rgb(238,202,70)
+
+// -----------------------------------------------
+// Animation styles
+// -----------------------------------------------
+.page#animation
+  .page-inner
+    .mask-wrapper
+      background-color: rgb(116,156,168)
  
 // -----------------------------------------------
-// About styles
+// Interactive styles
 // -----------------------------------------------
-.page#about
+.page#interactive
   .page-inner
-    background-color: rgb(0,174,239)
- 
-// -----------------------------------------------
-// Work styles
-// -----------------------------------------------
-.page#work
-  .page-inner
-    background-color: rgb(0,174,239)
+    .mask-wrapper
+      background-color: rgb(152,196,180)
 
 // -----------------------------------------------
 // Error styles
