--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -23,15 +23,12 @@
   width: 100%
   height: 100%
 
-  video
-    display: none
-
   canvas
     position: absolute
     top: 50%
     left: 50%
-    width: auto
-    height: 100%
+    min-width: 100%
+    min-height: 100%
     transform: translate(-50%, -50%)
 
 // ---------------------------------------------
