--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -19,17 +19,23 @@
 // ---------------------------------------------
 
 .cover-wrap
-  position: relative
-  width: 100%
-  height: 100%
+  position: absolute
+  top: 50%
+  left: 50%
+  width: auto
+  height: auto
+  min-width: 100%
+  min-height: 100%
+  transform: translate(-50%, -50%)
 
   canvas
     position: absolute
-    top: 50%
+    top: 0px
     left: 50%
-    min-width: 100%
-    min-height: 100%
-    transform: translate(-50%, -50%)
+    width: auto
+    height: 100%
+
+    transform: translate(-50%, 0)
 
 // ---------------------------------------------
 // Shared styles: Picture zone
