--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -129,34 +129,32 @@ header
       top: 50%
       right: 0px
       width: 60px
-      height: 20px
-      margin: -10px 0 0
+      height: 30px
       font-size: 0
       line-height: 0
 
+      transform: translate(0,-50%)
+
       @include respond-above($media_480)
         width: 80px
+        height: 40px
 
       a
+        position: relative
         width: 50%
         height: 100%
-        height: 20px
         text-decoration: none
-        background-image: url('/images/header-icons@2x.png')
-        background-repeat: no-repeat
-        background-position: center 2px
-        background-size: 32px 48px
         display: inline-block
 
-        &:last-child
-          background-position: center -30px
+        svg
+          position: absolute
+          top: 50%
+          left: 50%
+          width: 50%
+          height: 50%
+          fill: $black
 
-        @include respond-above($media_480)
-          background-position: center top
-          background-size: 40px 60px
-
-          &:last-child
-            background-position: center -40px
+          transform: translate(-50%,-50%)
 
 // ---------------------------------------------
 // Hide secondary nav in inverse view
@@ -191,8 +189,9 @@ header
 
       #secondary-nav
         a
-          opacity: 1
-          transition: opacity $speed $ease_out
+          svg
+            transition: fill $speed $ease_out
           
           &:hover
-            opacity: 0.6
+            svg
+              fill: $gray
