--- a/src/styles/slides/_home-feature.sass
+++ b/src/styles/slides/_home-feature.sass
@@ -178,41 +178,33 @@
         font-size: 0
         line-height: 0
 
-        li.social
+        li
           position: relative
-          width: 20px
           height: 20px
-          padding: 0 4px
           display: inline-block
           overflow: hidden
 
           a
-            position: absolute
-            top: 0px
-            left: 0px
             width: 100%
             height: 100%
-            background-image: url('/images/socials@2x.png')
-            background-repeat: no-repeat
-            background-size: 20px 80px
-            overflow: hidden
-            opacity: 1
+            padding: 0 4px
+            display: block
 
-            transition: opacity $speed $ease_out
+            svg
+              width: 20px
+              height: 100%
+              fill: $black
+              display: block
+
+              #icon-twitter
+                width: 80px
 
           &:nth-child(1)
-            padding-left: 0px
             a
-              background-position: center 0px
+              padding-left: 0px
 
-          &:nth-child(2) a
-            background-position: center -20px
-
-          &:nth-child(3) a
-            background-position: center -40px
-
-          &:nth-child(4) a
-            background-position: center -60px
+              svg
+                width: 24px
 
       ul.lists
         float: left
@@ -261,7 +253,7 @@
 // ---------------------------------------------
 
 .party-on
-  .slide.about-process
+  .slide.home-feature
     .info-zone
       .content
         ul.callouts
@@ -270,9 +262,11 @@
               animation: bounce $speed $evil_ease
 
         ul.socials
-          li.social
+          li
             a
-              opacity: 0.3
+              svg
+                transition: fill $speed $ease_out
               
               &:hover
-                opacity: 1
+                svg
+                  fill: $almost_black
