--- a/src/styles/slides/_home-feature.sass
+++ b/src/styles/slides/_home-feature.sass
@@ -179,32 +179,35 @@
         line-height: 0
 
         li
-          position: relative
-          height: 20px
           display: inline-block
-          overflow: hidden
+          height: 20px
 
           a
-            width: 100%
-            height: 100%
-            padding: 0 4px
             display: block
+            height: 100%
+            padding: 0 8px
 
             svg
-              width: 20px
+              display: block
+              width: 100%
               height: 100%
               fill: $black
-              display: block
 
-              #icon-twitter
-                width: 80px
+          a#social-twitter
+            width: 24px
 
-          &:nth-child(1)
+          a#social-facebook
+            width: 10px
+
+          a#social-vimeo
+            width: 23px
+
+          a#social-github
+            width: 20px
+
+          &:first-child
             a
               padding-left: 0px
-
-              svg
-                width: 24px
 
       ul.lists
         float: left
