mediums now using sweet svg'rs

--- a/src/styles/slides/_work-feature.sass
+++ b/src/styles/slides/_work-feature.sass
@@ -44,40 +44,35 @@
           content: 'Medium(s)'
         
         li
-          background-image: url('/images/mediums@2x.png')
-          background-size: 30px 300px
+          svg
+            width: 100%
+            height: 100%
+            fill: pink
+            display: block
 
           &.web
             width: 25px
-            background-position: center 0px
 
           &.animation
             width: 16px
-            background-position: center -40px
 
           &.three-dimensional
             width: 18px
-            background-position: center -80px
           
           &.experiential
             width: 18px
-            background-position: center -120px
 
           &.illustration
             width: 18px
-            background-position: center -160px
 
           &.live-action
             width: 18px
-            background-position: center -200px
 
           &.game
             width: 29px
-            background-position: center -240px
 
           &.sound
             width: 14px
-            background-position: center -280px
 
           span
             position: absolute
