New svgdefs for client logos.

--- a/src/styles/slides/_work-feature.sass
+++ b/src/styles/slides/_work-feature.sass
@@ -47,7 +47,7 @@
           svg
             width: 100%
             height: 100%
-            fill: pink
+            fill: $black
             display: block
 
           &.web
