--- a/src/styles/slides/_work-feature.sass
+++ b/src/styles/slides/_work-feature.sass
@@ -27,19 +27,124 @@
       li
         float: left
         position: relative
+        width: 80px
         height: 20px
         margin: 0 14px 0 0
 
         &:first-child
           margin: 0 14px 0 25px
 
-        img
-          width: auto
-          height: 100%
-          vertical-align: middle
-          display: block
+      &.clients
+        width: 308px
+
+        li
+          width: 20px
+          overflow: hidden
+
+          svg
+            width: 80px
+            height: 20px
+            fill: $black
+            display: block
+
+          &.icon-laika
+            width: 38px
+            svg
+              margin-left: -21px
+
+          &.icon-nike
+            width: 56px
+            svg
+              margin-left: -12px
+
+          &.icon-wieden
+            width: 46px
+            svg
+              margin-left: -17px
+
+          &.icon-nissan
+            width: 30px
+            svg
+              margin-left: -25px
+
+          &.icon-coke
+            width: 62px
+            svg
+              margin-left: -9px
+
+          &.icon-google
+            width: 56px
+            svg
+              margin-left: -12px
+
+          &.icon-ifd
+            width: 78px
+            svg
+              margin-left: -1px
+
+          &.icon-alameda
+            width: 78px
+            svg
+              margin-left: -1px
+
+          &.icon-ny-times
+            width: 16px
+            svg
+              margin-left: -32px
+
+          &.icon-tbwa
+            width: 20px
+            svg
+              margin-left: -30px
+
+          &.icon-newton
+            width: 78px
+            svg
+              margin-left: -1px
+
+          &.icon-leinenkugel
+            width: 38px
+            svg
+              margin-left: -21px
+
+          &.icon-social-deviant
+            width: 18px
+            svg
+              margin-left: -31px
+
+          &.icon-clyfford-still
+            width: 78px
+            svg
+              margin-left: -1px
+
+          &.icon-climate-reality
+            width: 76px
+            svg
+              margin-left: -2px
+
+          &.icon-bc4u
+            width: 46px
+            svg
+              margin-left: -17px
+
+          &.icon-sprocket
+            width: 20px
+            svg
+              margin-left: -30px
+
+          &.icon-ello
+            width: 20px
+            svg
+              margin-left: -30px
+
+          &.icon-kfc
+            width: 12px
+            svg
+              margin-left: -34px
 
       &.mediums
+        width: auto
+
         &:before
           content: 'Medium(s)'
         
