--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -1,5 +1,6 @@
 /* Settings and dependencies */
 @import "../../public/vendor/sass-meyer-reset/sass-meyer-reset"
+@import "fonts"
 @import "vars"
 @import "utils"
 
