--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -110,9 +110,10 @@
       float: left
       height: 24px
       padding: 0 0 12px
+      font-family: $avenir_bold
+      font-weight: normal
       font-size: 22px
       line-height: 24px
-      font-weight: $bold
       display: inline-block
       overflow: hidden
       opacity: 0
@@ -188,10 +189,10 @@
     @include respond-above($media_1024)
       @include respond-above-ht($media_ht_666)
         h2
-          height: 60px
+          height: 66px
           padding: 0 0 30px
           font-size: 66px
-          line-height: 56px
+          line-height: 66px
 
           transform: translate3d(0,0px,0)
 
@@ -232,7 +233,7 @@
       height: 100%
       padding: 0 10px
       cursor: pointer
-      font-family: $inconsolata
+      font-family: $inconsolata_regular
       font-size: 12px
       line-height: 50px
       font-weight: $bold
@@ -312,7 +313,7 @@
     height: 14px
     padding: 0 0 0 25px
     color: $black
-    font-family: $inconsolata
+    font-family: $inconsolata_regular
     font-size: 12px
     line-height: 14px
 
