--- a/src/styles/slides/_work-feature.sass
+++ b/src/styles/slides/_work-feature.sass
@@ -185,7 +185,7 @@
             left: 50%
             height: 40px
             padding: 0 20px
-            font-family: $inconsolata
+            font-family: $inconsolata_regular
             font-size: 14px
             line-height: 40px
             text-transform: capitalize
