--- a/src/styles/slides/detail/_detail.sass
+++ b/src/styles/slides/detail/_detail.sass
@@ -54,13 +54,11 @@
         h4
           max-width: 460px
           color: $white
-          @include type-mono
 
         p
           max-width: 460px
           margin: 10px 0 0
           color: $gray
-          @include type-mono
 
           &:nth-of-type(1)
             margin: 0
@@ -171,12 +169,8 @@
                 transform: translate3d(0,-100px,0)
                 transition: transform $speed_metal $evil_ease
 
-              h4
-                @include type-mono
-
               p
                 color: $gray
-                @include type-mono
 
               .lists
                 margin: 20px 0 0
@@ -187,14 +181,12 @@
 
                   li
                     color: $gray
-                    @include type-mono
 
                     &:first-child
                       color: $white
 
               a.launch-link
                 margin: 20px 0 0
-                @include type-mono
                 display: inline-block
 
         &.media-image
@@ -347,7 +339,7 @@
                 height: 100%
                 padding: 0 10px
                 cursor: pointer
-                font-family: $inconsolata
+                font-family: $inconsolata_regular
                 font-size: 12px
                 line-height: 50px
                 font-weight: $bold
