--- a/src/styles/_page-nav.sass
+++ b/src/styles/_page-nav.sass
@@ -64,9 +64,8 @@
             h4
               position: relative
               height: 100%
+              font: normal normal normal 11px/30px $avenir_regular
               color: $white
-              font-size: 10px
-              line-height: 30px
               display: inline-block
 
               transform: translate3d(0,0,0)
@@ -94,7 +93,7 @@
             @include respond-above($media_768)
               @include respond-above-ht($media_ht_480)
                 h4
-                  font-size: 12px
+                  font: normal normal normal 14px/40px $avenir_regular
 
           a.active
             h4
