--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -50,7 +50,7 @@ header
       position: absolute
       top: 50%
       left: 50%
-      height: 20px
+      height: 24px
       font-size: 0
       line-height: 0
       white-space: nowrap
@@ -60,17 +60,17 @@ header
 
       #primary-nav-inner
         position: relative
-        height: 60px
+        height: 72px
         display: inline-block
 
         transform: translate3d(0,0px,0)
         transition: transform $speed_metal $evil_ease
 
         ul
-          height: 20px
+          height: 24px
 
           &:last-child
-            margin-top: 20px
+            margin-top: 24px
 
           li
             height: 100%
@@ -79,19 +79,18 @@ header
             .nav-item,
             #close-project-btn
               position: relative
-              height: 14px
-              padding: 0 6px 6px
+              height: 12px
+              padding: 4px 6px 5px
+              font: normal normal normal 12px/12px $avenir_regular
               color: $black
-              font-size: 12px
-              line-height: 14px
               text-transform: capitalize
               display: block
               cursor: pointer
 
               @include respond-above($media_480)
                 @include respond-above-ht($media_ht_480)
-                  padding: 0 10px 6px
-                  font-size: 14px
+                  padding: 0 10px 8px
+                  font: normal normal normal 16px/16px $avenir_regular
 
               @include respond-above($media_768)
                 @include respond-above-ht($media_ht_480)
@@ -102,7 +101,7 @@ header
                 bottom: 0px
                 left: 6px
                 right: 6px
-                height: 3px
+                height: 2px
                 background-color: $light_gray
 
                 transition: background-color $speed $ease_out
@@ -111,6 +110,7 @@ header
                   @include respond-above-ht($media_ht_480)
                     left: 10px
                     right: 10px
+                    height: 3px
 
               &.active
                 cursor: default
@@ -127,15 +127,16 @@ header
     #secondary-nav
       position: absolute
       top: 50%
-      right: 0px
-      width: 60px
-      height: 30px
+      right: 10px
+      width: 68px
+      height: 34px
       font-size: 0
       line-height: 0
 
       transform: translate(0,-50%)
 
       @include respond-above($media_480)
+        right: 0px
         width: 80px
         height: 40px
 
