--- a/src/styles/_main.sass
+++ b/src/styles/_main.sass
@@ -4,9 +4,8 @@ html, body
   overflow: hidden
 
 body
+  font-family: $avenir_regular
   color: $white
-  @include type
-  font-weight: $regular
 
   -webkit-font-smoothing: antialiased
   -webkit-tap-highlight-color: rgba(0,0,0,0)
