--- a/src/styles/_pages.sass
+++ b/src/styles/_pages.sass
@@ -106,39 +106,83 @@
   .page-inner
     background-color: rgb(0,174,239)
 
-    .title-zone
-      .title-holder
-        cursor: default
+    #error-zone
+      position: absolute
+      top: 50%
+      padding: 0 20px
+      transform: translate(0, -50%)
 
-        h2
-          opacity: 1
+      @include respond-above($media_480)
+        padding: 0 40px
 
-      .callouts
-        .callout
-          font-size: 0
-          line-height: 0
-          cursor: default
+      @include respond-above($media_768)
+        padding: 0 60px
 
-          .copy
-            max-width: 480px
-            margin: 18px 0 0
-            font-size: 12px
-            line-height: 15px
-            text-transform: none
+      @include respond-above($media_1180)
+        padding: 0 100px
 
-          @include respond-above($media_768)
-            @include respond-above-ht($media_ht_480)
-              .copy
-                margin: 30px 0 0
-                font-size: 14px
+      h2
+        height: auto
+        margin-bottom: 16px
+        font: normal normal normal 20px/24px $avenir_bold
+        color: $black
+
+        @include respond-above($media_768)
+          font: normal normal normal 32px/38px $avenir_bold
+          margin-bottom: 26px
+
+
+      p
+        font: normal normal normal 11px/16px $avenir_regular
+
+        @include respond-above($media_768)
+          font: normal normal normal 16px/25px $avenir_regular
 
     .meta-zone
+      position: absolute
+      bottom: 0px
+      padding: 0 20px 20px
+
+      @include respond-above($media_480)
+        padding: 0 40px 40px
+
+      @include respond-above($media_768)
+        padding: 0 60px 40px
+
+      @include respond-above($media_1180)
+        padding: 0 100px 40px
+
       h4
-        padding: 0
+        position: relative
+        height: 12px
+        padding: 0 0 0 25px
+        font: normal normal normal 12px/12px $inconsolata_regular
+        color: $black
 
-        &:before,
+        &:before
+          content: ''
+          position: absolute
+          top: 0px
+          left: 3px
+          width: 2px
+          height: 12px
+          background-color: $black
+
         &:after
-          display: none
+          content: ''
+          position: absolute
+          top: 0px
+          left: 0px
+          width: 0
+          height: 0
+          margin-top: -1px
+          border-left: 4px solid transparent
+          border-right: 4px solid transparent
+          border-bottom: 6px solid $black
 
+        @include respond-above($media_768)
+          @include respond-above-ht($media_ht_480)
+            height: 14px
+            font: normal normal normal 14px/14px $inconsolata_regular
         a
           color: $black
