--- a/src/styles/slides/_home-feature.sass
+++ b/src/styles/slides/_home-feature.sass
@@ -1,250 +1,211 @@
 .slide.home-feature
 
   // ---------------------------------------------
-  // Title zone
-  // ---------------------------------------------
-
-  .title-zone.sub-title
-    top: 32px
-    margin: 0
-
-    transform: none
-
-    @include respond-above-ht($media_ht_666)
-      top: 92px
-
-    .title-holder
-      height: auto
-
-      h2
-        float: none
-        height: auto
-        padding: 0
-        color: $black
-        font-size: 32px
-        line-height: 40px
-
-        transform: translate3d(0,0px,0)
-
-        &:last-child
-          margin: 0
-          clear: none
-
-        &:after
-          display: none
-
-        .tagline
-          @include type-mono
-          font-weight: normal
-
-      &.top h2
-        transform: translate3d(0,-24px,0)
-
-      &.bottom h2
-        transform: translate3d(0,24px,0)
-
-      &.trans-in h2
-        opacity: 1
-
-        transform: translate3d(0,0px,0)
-        transition: transform $speed $ease_out, opacity $speed $ease_out
-
-      &.trans-out h2
-        opacity: 0
-        
-        transition: transform $speed $ease_in, opacity $speed $ease_in
-
-      &.trans-out.top h2
-        transform: translate3d(0,24px,0)
-
-      &.trans-out.bottom h2
-        transform: translate3d(0,-24px,0)
-
-  // ---------------------------------------------
   // Info zone
   // ---------------------------------------------
 
   .info-zone
     position: absolute
-    bottom: 14px
-    left: 20px
-    right: 30px
+    top: 50%
+    width: 100%
+    max-width: 800px
+    margin-top: -19px
+    transform: translate(0, -50%)
 
-    @include respond-above-ht($media_ht_480)
-      bottom: 32px
+    .info-holder
+      position: relative
+      display: inline-block
 
-    @include respond-above-ht($media_ht_666)
-      bottom: 92px
+      .content
+        padding: 0 20px
+        transform: translate3d(0px, 0px, 0px)
 
-    @include respond-above($media_480)
-      left: 40px
-
-    @include respond-above($media_768)
-      left: 60px
-      right: 60px
-
-    @include respond-above($media_1180)
-      left: 100px
-      right: 100px
-
-    .content
-      width: 100%
-      max-width: 420px
-
-      p
-        margin: 0 20px 0 0
-
-        a
-          position: relative
-          color: $black
-          display: inline-block
-
-          &:after
-            content: ''
-            position: absolute
-            bottom: 0px
-            left: 0px
-            width: 100%
-            height: 2px
-            background-color: $white
-
-      ul.callouts
-        margin: 10px 0 0
+        @include respond-above($media_480)
+          padding: 0 40px
 
         @include respond-above($media_768)
-          height: 40px
-          margin: 10px 0 -10px
+          padding: 0 60px
 
-          @include respond-above-ht($media_ht_480)
-            margin: 20px 0 -8px
+        @include respond-above($media_1180)
+          padding: 0 100px
 
-        li.callout
-          position: relative
-          height: 20px
-          color: $black
-          cursor: pointer
-          @include type-mono
+        .subtitle
+          display: block
+          font: normal normal normal 9px/9px $inconsolata_regular
+          margin-bottom: 10px
+          text-transform: uppercase
 
           @include respond-above($media_768)
-            float: left
-            height: 40px
-            line-height: 40px
+            font: normal normal normal 11px/11px $inconsolata_regular
+            margin-bottom: 20px
 
-            &:first-child
-              padding: 0 20px 0 0
+        h2
+          height: auto
+          margin-bottom: 24px
+          font: normal normal normal 20px/24px $avenir_bold
+          color: $black
 
-            &:last-child
-              padding: 0 0 0 20px
+          @include respond-above($media_768)
+            font: normal normal normal 32px/38px $avenir_bold
+            margin-bottom: 38px
 
-          .copy
-            float: left
-            position: relative
+        p
+          padding-right: 40px
+          font: normal normal normal 11px/16px $avenir_regular
 
-          .icon
-            float: left
-            position: relative
-            width: 25px
-            height: 100%
-            margin: 0 0 0 12px
-            overflow: hidden
-
-            .rect
-              position: absolute
-              top: 50%
-              left: 0px
-              width: 14px
-              height: 2px
-              margin: -1px 0 0
-              background-color: $white
-
-            .tri
-              position: absolute
-              top: 50%
-              left: 12px
-              width: 0
-              height: 0
-              margin: -4px 0 0
-              border-top: 4px solid transparent
-              border-bottom: 4px solid transparent
-              border-left: 6px solid $white
-
-      ul.socials
-        font-size: 0
-        line-height: 0
-
-        li
-          display: inline-block
-          height: 20px
+          @include respond-above($media_768)
+            font: normal normal normal 16px/25px $avenir_regular
 
           a
-            display: block
-            height: 100%
-            padding: 0 8px
+            position: relative
+            color: $black
+            display: inline-block
 
-            svg
-              display: block
+            &:after
+              content: ''
+              position: absolute
+              bottom: 0px
+              left: 0px
               width: 100%
-              height: 100%
-              fill: $black
+              height: 2px
+              background-color: $white
 
-          a#social-twitter
-            width: 24px
+        p.job-list
+          margin-top: 12px
+          line-height: 18px
 
-          a#social-facebook
-            width: 10px
+          @include respond-above($media_768)
+            line-height: 27px
 
-          a#social-vimeo
-            width: 23px
+          a
+            &:after
+              bottom: 2px
 
-          a#social-github
-            width: 20px
+        ul.lists
+          float: left
+          width: 50%
 
-          &:first-child
-            a
-              padding-left: 0px
-
-      ul.lists
-        float: left
-        width: 50%
-        margin: 10px 0 0
-
-        li
-          margin: 0 10px 0 0
-
-          &:first-child
-            @include type-mono
-            color: $black
-            text-transform: uppercase
-
-          span.full
-            display: none
-          span.chop
-            display: block
-
-          @include respond-above($media_480)
-            span.full
-              display: block
-            span.chop
-              display: none
-
-        @include respond-above-ht($media_ht_480)
-          margin: 20px 0 0
-
-        @include respond-above-ht($media_ht_560)
           li
-            display: block
+            font: normal normal normal 11px/16px $avenir_regular
+            margin: 0 10px 0 0
 
-      ul.stack
-        margin: 0 0 10px
+            @include respond-above($media_768)
+              font: normal normal normal 16px/25px $avenir_regular
 
-        li
-          &:first-child
-            @include type-mono
-            color: $black
-            text-transform: uppercase
+            &:first-child
+              font: normal normal normal 9px/9px $inconsolata_regular
+              margin-bottom: 10px
+              color: $black
+              text-transform: uppercase
 
-        @include respond-above-ht($media_ht_480)
-          margin: 0 0 20px
+              @include respond-above($media_768)
+                font: normal normal normal 11px/11px $inconsolata_regular
+                margin-bottom: 20px
+
+            span.full
+              display: none
+            span.chop
+              display: block
+
+            @include respond-above($media_480)
+              span.full
+                display: block
+              span.chop
+                display: none
+
+          &:nth-child(5),
+          &:nth-child(6)
+            margin: 10px 0 0
+
+            @include respond-above-ht($media_ht_480)
+              margin: 38px 0 0
+
+          @include respond-above-ht($media_ht_560)
+            li
+              display: block
+
+        ul.stack
+          li
+            font: normal normal normal 11px/16px $avenir_regular
+
+            @include respond-above($media_768)
+              font: normal normal normal 16px/25px $avenir_regular
+
+            &:first-child
+              font: normal normal normal 9px/9px $inconsolata_regular
+              margin-bottom: 10px
+              color: $black
+              text-transform: uppercase
+
+              @include respond-above($media_768)
+                font: normal normal normal 11px/11px $inconsolata_regular
+                margin-bottom: 20px
+
+          &:nth-child(4)
+            margin: 10px 0 0
+
+            @include respond-above-ht($media_ht_480)
+              margin: 38px 0 0
+
+        ul.socials
+          margin-top: 10px
+          font-size: 0
+          line-height: 0
+
+          li
+            display: inline-block
+            height: 20px
+
+            a
+              display: block
+              height: 100%
+              padding: 0 8px
+
+              svg
+                display: block
+                width: 100%
+                height: 100%
+                fill: $black
+
+            a#social-twitter
+              width: 24px
+
+            a#social-facebook
+              width: 10px
+
+            a#social-vimeo
+              width: 23px
+
+            a#social-github
+              width: 20px
+
+            &:first-child
+              a
+                padding-left: 0px
+
+      &.top .content
+        transform: translate3d(0,-24px,0)
+
+      &.bottom .content
+        transform: translate3d(0,24px,0)
+
+      &.trans-in .content
+        opacity: 1
+
+        transform: translate3d(0,0px,0)
+        transition: transform $speed $ease_out, opacity $speed $ease_out
+
+      &.trans-out .content
+        opacity: 0
+        
+        transition: transform $speed $ease_in, opacity $speed $ease_in
+
+      &.trans-out.top .content
+        transform: translate3d(0,24px,0)
+
+      &.trans-out.bottom .content
+        transform: translate3d(0,-24px,0)
+
 
 // ---------------------------------------------
 // Party mode
@@ -253,12 +214,6 @@
 .party-on
   .slide.home-feature
     .info-zone
-      .content
-        ul.callouts
-          li.callout:hover
-            .icon
-              animation: bounce $speed $evil_ease
-
         ul.socials
           li
             a
