--- a/src/styles/slides/_work-feature.sass
+++ b/src/styles/slides/_work-feature.sass
@@ -1,6 +1,229 @@
 .slide.work-feature
 
   // ---------------------------------------------
+  // Title zone
+  // ---------------------------------------------
+
+  .title-zone
+    position: absolute
+    top: 50%
+    left: 20px
+    right: 20px
+    font-size: 0
+    line-height: 0
+
+    transform: translate(0,-50%)
+
+    @include respond-above($media_480)
+      left: 40px
+      right: 40px
+      margin: 10px 0 0
+
+    @include respond-above($media_768)
+      left: 60px
+      right: 60px
+
+    @include respond-above($media_1180)
+      left: 100px
+      right: 100px
+
+    @include respond-above($media_1024)
+      @include respond-above-ht($media_ht_666)
+        margin: 16px 0 0
+
+    .title-holder
+      position: relative
+      display: inline-block
+      overflow: hidden
+      cursor: pointer
+
+      h2
+        position: relative
+        float: left
+        height: 24px
+        padding: 0 0 9px
+        font: normal normal normal 24px/24px $avenir_bold
+        overflow: hidden
+        opacity: 0
+
+        transform: translate3d(0px, 0px, 0px)
+
+        &:last-child
+          margin: 10px 0 0
+          clear: both
+
+        &:after
+          content: ''
+          position: absolute
+          bottom: 0px
+          left: 0px
+          width: 100%
+          height: 4px
+          background-color: $black
+
+      &.top h2
+        transform: translate3d(0,-24px,0)
+
+      &.bottom h2
+        transform: translate3d(0,24px,0)
+
+      &.trans-in h2
+        opacity: 1
+
+        transform: translate3d(0,0px,0)
+        transition: transform $speed $ease_out, opacity $speed $ease_out
+
+      &.trans-out h2
+        opacity: 0
+        
+        transition: transform $speed $ease_in, opacity $speed $ease_in
+
+      &.trans-out.top h2
+        transform: translate3d(0,24px,0)
+
+      &.trans-out.bottom h2
+        transform: translate3d(0,-24px,0)
+
+      @include respond-above($media_480)
+        h2
+          height: 30px
+          padding: 0 0 12px
+          font-size: 30px
+          line-height: 30px
+
+          transform: translate3d(0,0px,0)
+
+          &:last-child
+            margin: 13px 0 0
+
+          &:after
+            height: 5px
+
+        &.top h2
+          transform: translate3d(0,-40px,0)
+
+        &.bottom h2
+          transform: translate3d(0,40px,0)
+
+        &.trans-in h2
+          transform: translate3d(0,0px,0)
+
+        &.trans-out.top h2
+          transform: translate3d(0,40px,0)
+
+        &.trans-out.bottom h2
+          transform: translate3d(0,-40px,0)
+
+      @include respond-above($media_1024)
+        @include respond-above-ht($media_ht_666)
+          h2
+            height: 66px
+            padding: 0 0 27px
+            font-size: 66px
+            line-height: 66px
+
+            transform: translate3d(0,0px,0)
+
+            &:last-child
+              margin: 30px 0 0
+
+            &:after
+              height: 10px
+
+          &.top h2
+            transform: translate3d(0,-90px,0)
+
+          &.bottom h2
+            transform: translate3d(0,90px,0)
+
+          &.trans-in h2
+            transform: translate3d(0,0px,0)
+
+          &.trans-out.top h2
+            transform: translate3d(0,90px,0)
+
+          &.trans-out.bottom h2
+            transform: translate3d(0,-90px,0)
+
+    .callouts
+      position: relative
+      width: 100%
+      height: 50px
+      overflow: hidden
+
+      @include respond-above($media_1024)
+        @include respond-above-ht($media_ht_666)
+          height: 76px
+
+      .callout
+        float: left
+        position: relative
+        height: 100%
+        padding: 0 10px
+        cursor: pointer
+        font: normal normal normal 12px/50px $inconsolata_bold
+        text-transform: capitalize
+
+        @include respond-above($media_768)
+          @include respond-above-ht($media_ht_480)
+            font-size: 14px
+
+        @include respond-above($media_1024)
+          @include respond-above-ht($media_ht_666)
+            line-height: 76px
+
+        &:last-child
+          padding: 0 0 0 10px
+
+        &:nth-child(1)
+          padding: 0 10px 0 0
+
+        @include respond-above($media_480)
+          padding: 0 20px
+
+          &:last-child
+            padding: 0 0 0 20px
+
+          &:nth-child(1)
+            padding: 0 20px 0 0
+
+        .copy
+          float: left
+          position: relative
+
+        .icon
+          float: left
+          position: relative
+          width: 25px
+          height: 100%
+          margin: 0 0 0 12px
+          overflow: hidden
+
+          transform: translate3d(0px,0,0)
+          transition: transform 150ms $ease_out
+
+          &:before,
+          &:after
+            content: ''
+            position: absolute
+            top: 50%
+            left: 0px
+            width: 14px
+            height: 2px
+            margin: -1px 0 0
+            background-color: $white
+
+          &:after
+            left: 12px
+            width: 0
+            height: 0
+            margin: -4px 0 0
+            border-top: 4px solid transparent
+            border-bottom: 4px solid transparent
+            border-left: 6px solid $white
+            background-color: transparent
+
+  // ---------------------------------------------
   // Meta zone
   // ---------------------------------------------
 
@@ -16,10 +239,12 @@
         position: absolute
         bottom: 0px
         left: 10px
-        height: 10px
+        height: 9px
+        font: normal normal normal 9px/9px $inconsolata_regular
         color: $black
+        letter-spacing: 1px
+        text-transform: uppercase
         display: block
-        @include type-mono-small
 
         transform: rotate(-90deg) translate3d(0,0,0)
         transform-origin: bottom left
