Spinner for cover slides.

--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -14,29 +14,35 @@
     overflow: hidden
     cursor: default
 
-    // ---------------------------------------------
-    // Shared styles: Cover
-    // ---------------------------------------------
+    &.cover
+      background-image: url(../images/loading@2x.gif)
+      background-repeat: no-repeat
+      background-position: 50% 50%
+      background-size: 50px 50px
 
-    .cover-wrap
-      position: absolute
-      top: 50%
-      left: 50%
-      width: auto
-      height: auto
-      min-width: 100%
-      min-height: 100%
-      transform: translate(-50%, -50%)
-      display: none
+      // ---------------------------------------------
+      // Shared styles: Cover
+      // ---------------------------------------------
 
-      canvas
+      .cover-wrap
         position: absolute
-        top: 0px
+        top: 50%
         left: 50%
         width: auto
-        height: 100%
+        height: auto
+        min-width: 100%
+        min-height: 100%
+        transform: translate(-50%, -50%)
+        display: none
 
-        transform: translate(-50%, 0)
+        canvas
+          position: absolute
+          top: 0px
+          left: 50%
+          width: auto
+          height: 100%
+
+          transform: translate(-50%, 0)
 
     // ---------------------------------------------
     // Shared styles: Picture zone
