--- a/src/styles/slides/_slide.sass
+++ b/src/styles/slides/_slide.sass
@@ -32,6 +32,9 @@
         height: auto
         min-width: 100%
         min-height: 100%
+        background-repeat: no-repeat
+        background-position: 50% 50%
+        background-size: contain
         transform: translate(-50%, -50%)
         display: none
 
