Added svg4everybody, updated cursors, styled Vimeo players and other small fixes.

--- a/src/styles/slides/detail/_detail.sass
+++ b/src/styles/slides/detail/_detail.sass
@@ -307,6 +307,7 @@
             background-color: $black
             overflow: hidden
             user-select: none
+            cursor: col-resize
 
             .slider
               position: absolute
