--- a/src/styles/slides/_work-feature.sass
+++ b/src/styles/slides/_work-feature.sass
@@ -376,6 +376,8 @@
           content: 'Medium(s)'
         
         li
+          cursor: default
+
           svg
             width: 100%
             height: 100%
